--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Back</title>
-  </head>
-  <body>
+    <link href="https://api.fontshare.com/v2/css?f[]=nunito@700,401,400&f[]=bebas-neue@400&f[]=bespoke-stencil@700&display=swap" rel="stylesheet">  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
